--- a/.gitignore
+++ b/.gitignore
@@ -208,16 +208,15 @@ sunpydata.sqlite
 sunpydata.sqlite-journal
 sunpy/_compiler.c
 sunpy/cython_version.py
+sunpy/_version.py
 docs/_build
 docs/generated
 docs/api/
 docs/whatsnew/latest_changelog.txt
 examples/**/*.asdf
 examples/**/*.csv
-# This is incase you run the figure tests
 figure_test_images*
 tags
-sunpy/version.py
 
 ### Pycharm(?)
 .idea
