--- a/setup.cfg
+++ b/setup.cfg
@@ -71,13 +71,16 @@ docs =
   jplephem
 
 
+[options.packages.find]
+exclude = sunpy._dev
+
 [options.entry_points]
 asdf_extensions =
   sunpy = sunpy.io.special.asdf.extension:SunpyExtension
 
 [tool:pytest]
 testpaths = "sunpy" "docs"
-norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" "sunpy[/\]cm" ".jupyter" ".history" "tools" "sunpy[\/]extern"
+norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" "sunpy[/\]_dev" ".jupyter" ".history" "tools" "sunpy[\/]extern"
 doctest_plus = enabled
 doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
 addopts = --doctest-rst -m "not figure" --doctest-ignore-import-errors
