--- a/setup.cfg
+++ b/setup.cfg
@@ -73,10 +73,10 @@ visualization =
   matplotlib>=3.1.0
 tests =
   jplephem  # For some coordinates tests
-  pytest-astropy
-  pytest-doctestplus
+  pytest-astropy>=0.8  # 0.8 is the first release to include filter-subpackage
+  pytest-doctestplus>=0.5 # We require the newest version of doctest plus to use +IGNORE_WARNINGS
   pytest-mock
-  pytest-mpl
+  pytest-mpl>=0.12 # First version to support our figure tests
   tox
 docs =
   astroquery
@@ -86,8 +86,8 @@ docs =
   ruamel.yaml
   sphinx
   sphinx-automodapi
-  sphinx-changelog
-  sphinx-gallery
+  sphinx-changelog>=1.0.0 # First to include the changelog directive
+  sphinx-gallery>=0.7.0 # First to include the mini-galleries directive
   sunpy-sphinx-theme
   towncrier
 
