--- a/tox.ini
+++ b/tox.ini
@@ -39,6 +39,7 @@ setenv =
     PYTEST_COMMAND = pytest -vvv -s -raR --pyargs sunpy --cov-report=xml --cov=sunpy --cov-config={toxinidir}/setup.cfg {toxinidir}/docs
     devdeps,build_docs,online: HOME = {envtmpdir}
     build_docs: HIDE_PARFIVE_PROGESS = True
+    HELIO_SSL = 0
 passenv =
     HTTP_PROXY
     HTTPS_PROXY
