--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,10 @@ envlist =
     py{37,38,39}{,-oldestdeps,-devdeps,-online,-figure}
     build_docs
     codestyle
+requires =
+    setuptools >= 30.3.0
+    pip >= 19.3.1
+    tox-pypi-filter >= 0.12
 isolated_build = true
 
 [testenv]
@@ -36,6 +40,7 @@ setenv =
     PYTEST_COMMAND = pytest -vvv -s -raR --pyargs sunpy --cov-report=xml --cov=sunpy --cov-config={toxinidir}/setup.cfg {toxinidir}/docs
     devdeps,build_docs,online: HOME = {envtmpdir}
     build_docs: HIDE_PARFIVE_PROGESS = True
+    HELIO_SSL = 0
 passenv =
     HTTP_PROXY
     HTTPS_PROXY
