--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,10 @@ envlist =
     build_docs
     codestyle
     hypothesis
+requires =
+    setuptools >= 30.3.0
+    pip >= 19.3.1
+    tox-pypi-filter >= 0.12
 isolated_build = true
 
 [testenv]
@@ -37,6 +41,7 @@ setenv =
     PYTEST_COMMAND = pytest -vvv -s -raR --pyargs sunpy --cov-report=xml --cov=sunpy --cov-config={toxinidir}/setup.cfg {toxinidir}/docs
     devdeps,build_docs,online: HOME = {envtmpdir}
     HIDE_PARFIVE_PROGESS = True
+    HELIO_SSL = 0
 passenv =
     HTTP_PROXY
     HTTPS_PROXY
