--- a/setup.cfg
+++ b/setup.cfg
@@ -175,6 +175,8 @@ filterwarnings =
     # Recent change to astropy has made our figure tests emit this warning.
     # https://github.com/sunpy/sunpy/issues/5073
     ignore:'datfix' made the change:astropy.wcs.wcs.FITSFixedWarning
+    # Ignore internal instr dep warning until we remove it
+    ignore:sunpy.instr is deprecated and will be removed in sunpy 3.1.
 
 [pycodestyle]
 max_line_length = 110
